--- a/Exercise-4/Ex4 leJOS/test-output/old/Default suite/classes.html
+++ b/Exercise-4/Ex4 leJOS/test-output/old/Default suite/classes.html
@@ -11,7 +11,27 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>testEightPuzzleBreadthFirst</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testEightPuzzleDepthFirst</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testEightPuzzleAStar</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testStringPuzzleDepthFirst</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testStringPuzzleBreadthFirst</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testStringPuzzleAStar</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
