--- a/Exercise-4/Ex4 leJOS/test-output/old/Default suite/methods-alphabetical.html
+++ b/Exercise-4/Ex4 leJOS/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75c2be">  <td>14/03/04 19:35:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;myTest.setUp()[pri:0, instance:test.myTest@1a76e19]">&gt;&gt;setUp</td> 
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;myTest.setUp()[pri:0, instance:test.myTest@16e1eff]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@17510567</td>   <td></td> </tr>
-<tr bgcolor="75c2be">  <td>14/03/04 19:35:54</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="myTest.testEightPuzzleAStar()[pri:0, instance:test.myTest@1a76e19]">testEightPuzzleAStar</td> 
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;myTest.setUp()[pri:0, instance:test.myTest@16e1eff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;myTest.setUp()[pri:0, instance:test.myTest@16e1eff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;myTest.setUp()[pri:0, instance:test.myTest@16e1eff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;myTest.setUp()[pri:0, instance:test.myTest@16e1eff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>630</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;myTest.setUp()[pri:0, instance:test.myTest@16e1eff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="myTest.testEightPuzzleAStar()[pri:0, instance:test.myTest@16e1eff]">testEightPuzzleAStar</td> 
+  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="myTest.testEightPuzzleBreadthFirst()[pri:0, instance:test.myTest@16e1eff]">testEightPuzzleBreadthFirst</td> 
+  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="myTest.testEightPuzzleDepthFirst()[pri:0, instance:test.myTest@16e1eff]">testEightPuzzleDepthFirst</td> 
+  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="myTest.testStringPuzzleAStar()[pri:0, instance:test.myTest@16e1eff]">testStringPuzzleAStar</td> 
+  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="myTest.testStringPuzzleBreadthFirst()[pri:0, instance:test.myTest@16e1eff]">testStringPuzzleBreadthFirst</td> 
+  <td>main@17510567</td>   <td></td> </tr>
+<tr bgcolor="a8cdb8">  <td>14/03/04 21:08:56</td>   <td>630</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="myTest.testStringPuzzleDepthFirst()[pri:0, instance:test.myTest@16e1eff]">testStringPuzzleDepthFirst</td> 
   <td>main@17510567</td>   <td></td> </tr>
 </table>
